--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -254,7 +254,8 @@
                       </div>
                     <% end %>
                     <div class="border-t border-gray-100"></div>
-                    <%= link_to destroy_user_session_path, method: :delete,
+                    <%= link_to destroy_user_session_path,
+                        data: { turbo_method: :delete },
                         class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" do %>
                       <div class="flex items-center">
                         <svg class="w-4 h-4 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
