--- a/app/views/onboarding/install_gem.html.erb
+++ b/app/views/onboarding/install_gem.html.erb
@@ -126,9 +126,6 @@
         </div>
         <pre id="initializer-code" class="text-green-400 text-sm"><code>ActiveRabbit::Client.configure do |config|
   config.api_key = "<%= @project.api_token %>"
-  config.project_id = "<%= @project.id %>"
-  config.api_url = "<%= request.base_url %>"
-  config.environment = Rails.env
 
   # Enable monitoring features
   config.enable_performance_monitoring = true
@@ -147,9 +144,7 @@ end</code></pre>
             <h3 class="text-sm font-medium text-blue-900 mb-2">Alternative: Use Environment Variables</h3>
             <p class="text-sm text-blue-800 mb-3">You can also configure using environment variables:</p>
             <div class="bg-white rounded border p-3">
-              <pre class="text-xs text-gray-700"><code>ACTIVERABBIT_API_KEY=<%= @project.api_token %>
-ACTIVERABBIT_PROJECT_ID=<%= @project.id %>
-ACTIVERABBIT_API_URL=<%= request.base_url %></code></pre>
+              <pre class="text-xs text-gray-700"><code>ACTIVERABBIT_API_KEY=<%= @project.api_token %></code></pre>
             </div>
           </div>
         </div>
