--- a/app/views/performance/index.html.erb
+++ b/app/views/performance/index.html.erb
@@ -78,7 +78,7 @@
           </svg>
           <input type="text" name="q" placeholder="Filter by attribute values"
                  value="<%= params[:q] %>"
-                 class="w-full pl-9 pr-3 py-1.5 rounded-full border border-gray-300 bg-gray-50 text-xs text-center focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition-all duration-200 placeholder-gray-400">
+                 class="w-full pl-9 pr-3 py-1.5 rounded-full border border-gray-300 bg-gray-50 text-xs focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition-all duration-200 placeholder-gray-400">
         </div>
       </form>
 
