--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -22,6 +22,7 @@
   </head>
 
   <body class="bg-gray-50">
+    <div id="flash_messages"></div>
     <div class="h-screen flex overflow-hidden">
       <!-- Sidebar -->
       <div class="fixed inset-y-0 left-0 bg-gray-900 text-white w-64 p-4 flex flex-col">
